--- a/Resources/manifest.yml
+++ b/Resources/manifest.yml
@@ -7,5 +7,5 @@
 #Imperial Space logo
 
 defaultWindowTitle: Space Station 14 - Imperial Space [RU]
-windowIconSet: /Textures/Logo/imperial
-splashLogo: /Textures/Logo/imperial.png
+windowIconSet: /Textures/Imperial/Logo/icon
+splashLogo: /Textures/Imperial/Logo/imperial.png
