--- a/Resources/Prototypes/Imperial/Clothing/Helmets/ops_core.yml
+++ b/Resources/Prototypes/Imperial/Clothing/Helmets/ops_core.yml
@@ -3,6 +3,7 @@
   parent: ClothingHeadHardsuitWithLightBase
   name: fire helmet
   description: An atmos tech's best friend. Provides some heat resistance and looks cool.
+  suffix: DeadSector
   components:
   - type: Sprite
     sprite: Imperial/Clothing/Head/Helmets/ops_core.rsi
