--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/suits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/suits.yml
@@ -161,8 +161,9 @@
     parent: true
     components:
     - type: Stealth
-      minVisibility: 0.01 # Imperial Space "0.1 > 0.01" @CrookLv
-      lastVisibility: 0.01 # Imperial Space "0.1 > 0.01" @CrookLv
+      minVisibility: -10 # Imperial Space "0.1 > -10" @CrookLv and @ArturUr для ребаланса ниндзи
+      lastVisibility: -1 # Imperial Space "0.1 > -1" @CrookLv and @ArturUr для ребаланса ниндзи
+      maxVisibility: 1 # Imperial Space
   - type: PowerCellDraw
     drawRate: 1.8 # 200 seconds on the default cell
   - type: ToggleCellDraw
